base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: todo-backend
