base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    # We do not use rewrite-target because the backend already handles the /api prefix natively (e.g. /api/todos)
    kubernetes.io/ingress.class: "nginx"
    # cert-manager legge questa annotazione e crea automaticamente un oggetto
    # Certificate + il Secret "todo-tls" firmato dal ClusterIssuer selfsigned-issuer
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - todo.local
    # Nome del Secret che cert-manager creerà nel namespace todo-app
    # contenente tls.crt e tls.key generati dal ClusterIssuer selfSigned
    secretName: todo-tls
  rules:
  - host: todo.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
